회원가입 구현중, User 엔티티 일부 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,11 @@ spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=update
 
+# Thymeleaf
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 
 # Swagger2
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
