--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.show-sql=true
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # Thymeleaf
 spring.thymeleaf.cache=false
